quiz-style.css
h1 {
	text-align: center;
}

body {
	font-size: 20px;
	font-family: sans-serif;
	background-color: beige;
}

.noselect {
	-webkit-touch-callout: none;	/* iOS Safari */
	-webkit-user-select: none;		/* Chrome/Safari/Opera */
	-khtml-user-select: none;		/* Konqueror */
	-moz-user-select: none;			/* Firefox */
	-ms-user-select: none;			/* IE/Edge */
	user-select: none;
}

.nobreak {
	white-space: nowrap;
	display: inline-block;
}
/*style of the game tiles*/
.game-div {
	border: 1px solid black;
	display: inline-block;
	width: 4em;
	margin: 0.2em;
}
.game-div p {
}
.game-div:hover {
	border-style: dotted;
	background-color: wheat;
	cursor: default;
}

/*center the game tiles*/
#the-game {
	-moz-user-select: none;
	text-align: center;
	margin-bottom: 3em;
	padding:1em;
}

#the-game .game-div:first-of-type {
	margin-left: auto;
}

#the-game .game-div:last-of-type {
	margin-left: auto;
}


/*style of the answer tiles*/
.answer-div {
	border: 2px solid black;
	display: inline-block;
	width: 8em;
	margin: 0.1em;
}
.answer-div:hover {
	border-style: dotted;
	background-color: wheat;
	cursor: default;
}

/*center the answer tiles*/
#the-answers {
	text-align: center;
	margin-top: 3em;
}

#the-answers .answer-div:first-of-type {
	margin-left: auto;
}

#the-answers .answer-div:last-of-type {
	margin-left: auto;
}

